# 4w_sdk

./: CMakeLists_onnxpolicy.txt  CMakeLists_robot.txt  build.sh  play.py  test.sh
cpp/include/: elapsed_timer.hpp  elapsed_timer_rt.hpp  fx_client.hpp  mode.hpp  onnxpolicy.hpp  rl.hpp  robot.hpp
cpp/src/: elapsed_timer.cpp  fx_client.cpp  mode_bindings.cpp  onnxpolicy_bindings.cpp  rl_bindings.cpp  robot_bindings.cpp
lagacy_py/: rl.py  robot.py
w4_sdk/: __init__.py
w4_sdk/classes/: joystick.py
w4_sdk/classes/mode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
w4_sdk/classes/onnxpolicy/: CMakeCache.txt  Makefile  cmake_install.cmake
w4_sdk/classes/rl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
w4_sdk/classes/robot/: CMakeCache.txt  Makefile  cmake_install.cmake
w4_sdk/core/: control_rate.py  exceptions.py
weight/: 4w4l_mlp_policy.onnx
